# Piscine_Python

./: README.md
Day_01/ex00/: Hello.py
Day_01/ex01/: format_ft_time.py
Day_01/ex02/: find_ft_type.py
Day_01/ex03/: NULL_not_found.py  tester.py
Day_01/ex04/: whatis.py
Day_01/ex05/: building.py
Day_01/ex06/: filterstring.py  ft_filter.py
Day_01/ex07/: sos.py
Day_01/ex08/: Loading.py  tester.py
Day_01/ex09/: LICENSE  README.md  pyproject.toml  tester.py
Day_01/ex09/ft_package/: __init__.py  core.py
Day_02/ex00/: give_bmi.py
Day_02/ex01/: array2D.py
Day_02/ex02/: load_image.py
Day_02/ex03/: zoom.py
Day_02/ex04/: load_image.py  rotate.py
Day_02/ex05/: load_image.py  pimp_image.py
Day_03/ex00/: load_csv.py
Day_03/ex01/: aff_life.py  load_csv.py
Day_03/ex02/: aff_pop.py
Day_03/ex03/: load_csv.py  projection_life.py
Day_04/ex00/: tester.py
Day_04/ex01/: tester.py
Day_04/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
Day_04/ex03/: ft_calculator.py  tester.py
Day_04/ex04/: ft_calculator.py  tester.py
Day_05/ex00/: statistics.py  tester.py
Day_05/ex01/: in_out.py  tester.py
Day_05/ex02/: callLimit.py  tester.py
Day_05/ex03/: new_student.py  tester.py
