[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [
  {name="eagle", email="eagle@42.fr"}
]
license = "MIT"
homepage = "https://github.com/eagle/ft_package"
requires-python = ">=3.6"

#On peut bien sûr ajouter d’autres champs selon la PEP 621, comme keywords, classifiers, dependencies, etc.