[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
authors = [
  {name="jedurand", email="jedurand@student.42perpignan.fr"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"

#On peut bien sûr ajouter d’autres champs selon la PEP 621, comme keywords, classifiers, dependencies, etc.